Fix Navbar overlap

--- a/src/components/Navbar/_nav.scss
+++ b/src/components/Navbar/_nav.scss
@@ -46,7 +46,7 @@
                     margin: 0 1rem;
                     position: relative;
                     transition: all 0.2s ease-in-out;
-                    left: -17rem;
+                    left: -14rem;
 
                     &::after {
                         content: '';
